samples/_failures_safe/1761217756_c4fdb8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eaf7595e.c: In function ‘main’:
./samples/SAFE/__tmp_eaf7595e.c:186:5: error: expected declaration or statement at end of input
  186 |     print_state_info(&sm);
      |     ^~~~~~~~~~~~~~~~
